allow registration of new users

--- a/templates/register.html
+++ b/templates/register.html
@@ -5,11 +5,11 @@
 {% else %}
 
 
-<form action="/login" method="POST">
+<form action="/register" method="POST">
 	<div class="login">
 		<div class="login-screen">
 			<div class="app-title">
-				<h1>Login</h1>
+				<h1>Register</h1>
 			</div>
 
 			<div class="login-form">
@@ -23,14 +23,12 @@
 				<label class="login-field-icon fui-lock" for="login-pass"></label>
 				</div>
 
-        <input type="submit" value="Log in" class="btn btn-primary btn-large btn-block" >
+        <input type="submit" value="Register" class="btn btn-primary btn-large btn-block" >
 			  <br>
 			</div>
 		</div>
 	</div>
 </form>
-
-<a href='/registration'>Register here</a>
 
 {% endif %}
 {% endblock %}
