--- a/templates/create_event.html
+++ b/templates/create_event.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="/static/style.css" type="text/css">
 {% block body %}
-
+{% include 'nav.html' %}
 
 <form action="/create_event" method="POST">
 	<div class="login">
