--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="/static/style.css" type="text/css">
-
+{% include 'nav.html' %}
 <h1>Welcome!</h1>
 
 <a href='/event_list'>See what events are available!</a>
