--- a/templates/login.html
+++ b/templates/login.html
@@ -30,7 +30,15 @@
 	</div>
 </form>
 
-<a href='/registration'>Register here</a>
+<form action="/registration" >
+  <div class="login">
+		<div class="login-screen">
+			<div class="login-form">
+        <input type="submit" style="background-color: #CC7722;" value="Or register">
+      </div>
+    </div>
+  </div>
+</form>
 
 {% endif %}
 {% endblock %}
