--- a/static/style.css
+++ b/static/style.css
@@ -1,13 +1,13 @@
 * {
 box-sizing: border-box;
 }
- 
+
 *:focus {
 	outline: none;
 }
 body {
 font-family: Arial;
-background-color: #3498DB;
+background-color: #FFFFFF;
 padding: 50px;
 }
 .login {
@@ -19,19 +19,19 @@ background-color: #FFF;
 padding: 20px;
 border-radius: 5px
 }
- 
+
 .app-title {
 text-align: center;
 color: #777;
 }
- 
+
 .login-form {
 text-align: center;
 }
 .control-group {
 margin-bottom: 10px;
 }
- 
+
 input {
 text-align: center;
 background-color: #ECF0F1;
@@ -43,12 +43,12 @@ padding: 10px 0;
 width: 250px;
 transition: border .5s;
 }
- 
+
 input:focus {
 border: 2px solid #3498DB;
 box-shadow: none;
 }
- 
+
 .btn {
   border: 2px solid transparent;
   background: #3498DB;
@@ -65,14 +65,139 @@ box-shadow: none;
   width: 250px;
   margin: 0 auto;
 }
- 
+
 .btn:hover {
   background-color: #2980B9;
 }
- 
+
 .login-link {
   font-size: 12px;
   color: #444;
   display: block;
 	margin-top: 12px;
+}
+
+$font-family-sans: Helvetica, Arial, sans-serif !default;
+$font-family-serif: Georgia;
+$font-family-monospace: Courier;
+
+// Colors
+$white: #FFFFFF;
+$black: #000000;
+$off-white: #F4F5F6;
+$grey-dark: #929292;
+$grey-medium: #d8d8d8;
+$grey-medium2: #e2e2e2;
+$grey-light:#B0B4BA;
+
+// link colors
+$link-color: #4CAEEB;
+
+// background colors
+$background-green: #1ead37;
+$blue: #0A92E5;
+$blue-medium: #4CAEEB;
+$blue-dark: #07507A;
+
+body {
+  margin: 0;
+  padding: 0;
+  background-color: #F4F5F6;
+}
+
+a.image-link {
+  text-decoration: none;
+}
+
+body, h1, h2, h3, h4, .h1, .h2, .h3, .h4 {
+  font-family: $font-family-sans;
+  font-weight: 300;
+  color: rgba(0, 0, 0, 0.8); }
+h1, .h1 {
+  font-size: 40px;
+  line-height: 42px; }
+
+.largeprint {
+  font-size: 28px;
+  line-height: 35px; }
+
+h2, .h2 {
+  font-size: 21px;
+  line-height: 28px; }
+
+h3, .h3 {
+  font-size: 18px;
+  line-height: 24px; }
+
+h4, .h4, p {
+  font-size: 16px;
+  line-height: 24px; }
+
+.fineprint {
+  font-size: 11px;
+  line-height: 24px; }
+
+b, .bold {
+  font-weight: bold; }
+
+.icon {
+  display:block;
+  border:0;
+  margin:15px 0 32px 0;
+  padding-bottom: 10px;
+}
+.center {
+  text-align:center;
+  margin:0 auto !important;
+}
+
+.container {
+  width: 100%;
+  min-width: 320px;
+  height: 100%;
+}
+
+.md-card {
+  background-color: #4CAEEB;
+  max-width: 600px;
+  min-height: 200px;
+  text-align: center;
+  margin: 0 auto;
+
+  .card-header {
+    min-height: 12px;
+    background-color: #FFFFFF;
+    color: #000000;
+    font-size: 24px;
+    text-align: left;
+    padding: 10px 20px;
+    border-radius: 5px 5px 0 0;
+  }
+}
+
+.topnav {
+    background-color: #333;
+    overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+    background-color: #4CAF50;
+    color: white;
 }
