--- a/templates/event_list.html
+++ b/templates/event_list.html
@@ -1,22 +1,20 @@
 <link rel="stylesheet" href="/static/style.css" type="text/css">
 
 {% block body %}
-         <div class="row">
-            <div class="large-8 columns">
-               <div class="row container1">
-                   {% for event in events %}
-                       <div class="large-4 small-4 columns">
-                           <ul class="pricing-table">
-                               {% if event.event_name %}<li class="title">{{ event.event_name }}</li>{% endif %}
-                               {% if event.event_description %}<li class="price">{{ event.event_description }}</li>{% endif %}
-                               {% if event.event_location %}<li class="bullet-item">{{ event.event_location }}</li>{% endif %}
-                               {% if event.event_active %}<li class="description">{{ event.event_active }}</li>{% endif %}
-                           </ul>
-                       </div>
-                   {% endfor %}
-               </div>
-            </div>
-         </div>
-
-
+{% include 'nav.html' %}
+ <div class="container">
+   {% for event in events %}
+   <div class="md-card container-shadow">
+     <div class="card-header">
+       {% if event.event_name %}<h4>{{ event.event_name }}</h4>{% endif %}
+     </div>
+     <div class="content-section">
+       <img src="https://www.iconfinder.com/icons/339771/bee_food_honey_natural_sugar_sweet_icon" class="icon center">
+       {% if event.event_description %}<h4>{{ event.event_description }}</h4>{% endif %}
+       {% if event.event_location %}<h4>{{ event.event_location }}</h4>{% endif %}
+       {% if event.event_active %}<h4>{{ event.event_active }}</h4>{% endif %}
+     </div>
+   </div>
+   {% endfor %}
+ </div>
 {% endblock %}
