--- a/templates/login.html
+++ b/templates/login.html
@@ -34,7 +34,7 @@
   <div class="login">
 		<div class="login-screen">
 			<div class="login-form">
-        <input type="submit" style="background-color: #CC7722;" value="Or register">
+        <input type="submit" class="btn" value="Or register">
       </div>
     </div>
   </div>
