--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,6 +1,11 @@
+<div style="text-align: center;">
+  <img src="/static/bannerlogo.png" alt="Bee Gigglin'">
+</div>
+
 <div class="topnav">
   <a href="/">Home</a>
   <a href="/event_list">Event List</a>
   <a href="/event_form">Create Event</a>
   <a href="/logout">Logout</a>
 </div>
+<br>
