--- a/templates/event_page.html
+++ b/templates/event_page.html
@@ -9,6 +9,36 @@
 <br>
 <h2>Location</h2>
 {{ event.event_location }}
+<div id="googleMap" style="width:50%;height:400px;"></div>
+<script type="text/javascript">
+	function myMap() {
+	var mapProp= {
+	    center:new google.maps.LatLng(51.4381039,5.4424674),
+	    zoom:7,
+	};
+	
+	var icon = {
+    url: "/static/bee.png" , // url
+    scaledSize: new google.maps.Size(50, 50), // scaled size
+    origin: new google.maps.Point(0,0), // origin
+    anchor: new google.maps.Point(0, 0) // anchor
+	};
+
+	var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
+	var myCenter = new google.maps.LatLng(51.4381039,5.4424674);
+	var marker = new google.maps.Marker(
+		{
+			position: myCenter,
+			animation:google.maps.Animation.BOUNCE,
+			icon: icon
+		});
+	marker.setMap(map); 	
+	google.maps.event.addListener(marker,'click',function() {
+    map.setZoom(12);
+    map.setCenter(marker.getPosition());
+  	});
+	}
+</script>
 <br>
 <br>
 
@@ -23,3 +53,5 @@
 <h2>Attendees</h2>
 
 {% endif %}
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCU2SPpv4dHcdS-gS-FSo0fX0uFSPf0e-0&callback=myMap"></script>
+
