--- a/templates/register.html
+++ b/templates/register.html
@@ -1,4 +1,9 @@
 <link rel="stylesheet" href="/static/style.css" type="text/css">
+
+<div style="text-align: center;">
+  <img src="/static/bannerlogo.png" alt="Bee Gigglin'">
+</div>
+
 {% block body %}
 {% if session['logged_in'] %}
 <p>You're logged in already!</p>
